# Posture-Gesture-Recognition

./: .gitignore  README.md  pyproject.toml  requirements.txt
blazepose/: README.md  dataset.py  inference.py  model.py  torch_utils.py  train.py  utils.py
blazepose/config/: train.json
data/: coco_keypoints.py
hgr/: dataset.py  evaluate.py  gesture.py  inference.py  landmark.py  skeletal_classifier.py  skeletal_classifier_train.py  torch_utils.py  train.py  train_gesture.py  utils.py
mediapipe/: gesture.py  pose.py
